Fix  page bugs 15 (#190)
* fix bugs

* fix bugs

* fix bugs

* fix bugs

* fix bugs

* fix prettier

---------

Co-authored-by: FeNRiR <germes955@gamail.com>

--- a/src/components/RegionCard/RegionCard.module.scss
+++ b/src/components/RegionCard/RegionCard.module.scss
@@ -10,6 +10,7 @@
   box-shadow: 0 12px 12px rgba(0, 60, 118, 0.15);
   border-radius: 8px;
   z-index: 3;
+  pointer-events: all;
 }
 
 .cart_picture {
