--- a/src/features/ChangeAccomodationModal/RoomCard/RoomCard.module.scss
+++ b/src/features/ChangeAccomodationModal/RoomCard/RoomCard.module.scss
@@ -19,7 +19,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: scroll;
+  overflow-y: auto;
   padding: 10px 19px 0;
 }
 .title {
