--- a/src/features/ChangeHotelModal/ChangeHotelModal.module.scss
+++ b/src/features/ChangeHotelModal/ChangeHotelModal.module.scss
@@ -1,10 +1,16 @@
 @use 'styles/style.scss' as *;
 
+.modalWrap {
+  width: 100%;
+}
 .modal {
   padding: 40px 64px;
   overflow: auto;
   width: 100%;
   height: 70vh;
+  @include mobile {
+    padding: 20px;
+  }
 }
 
 .title {
@@ -22,11 +28,16 @@
 }
 
 .select {
-  font-family: Lato;
+  font-family: $font-Lato;
   font-size: 14px;
   display: flex;
   gap: 32px;
+  align-items: center;
   margin-bottom: 22px;
+
+  @include mobile {
+    display: block;
+  }
 }
 
 .range {
@@ -37,31 +48,21 @@
 
 .sorting {
   display: flex;
-  align-items: center;
+  align-items: start;
   justify-content: space-between;
-  gap: 20px;
   margin-bottom: 36px;
 
   .tags {
     display: flex;
-    align-items: center;
+    align-items: start;
     box-sizing: content-box;
     gap: 8px;
-    max-width: 560px;
-    overflow-x: auto;
+    width: 100%;
     font-weight: $fw-medium;
     padding-bottom: 4px;
 
-    &::-webkit-scrollbar {
-      height: 8px;
-    }
-    &::-webkit-scrollbar-track {
-      background: $color-modal-header;
-    }
-    &::-webkit-scrollbar-thumb {
-      background-color: $color-laros-dark-grey;
-      border-radius: 24px;
-      border: 1px solid $color-light-grey;
+    @include mobile {
+      display: block;
     }
   }
 }
@@ -71,7 +72,14 @@
   gap: 8px;
   border: none;
   padding-left: 0;
+  overflow: hidden;
+  overflow-x: auto;
   list-style-type: none;
+
+  @include mobile {
+    margin-top: 10px;
+    margin-left: 0;
+  }
 }
 
 .tab {
@@ -81,6 +89,7 @@
   border: 1px solid $color-placeholder;
   color: $color-black;
   white-space: nowrap;
+  margin-bottom: 5px;
 }
 
 .selectedTab {
@@ -91,12 +100,16 @@
 .direction {
   display: flex;
   align-items: center;
-  gap: 8px;
-  margin-bottom: 12px;
+  margin-left: 20px;
 
   .selectDirection {
     width: 86px;
+    margin-left: 10px;
     background-color: $color-white;
+  }
+  @include mobile {
+    margin-top: 10px;
+    margin-left: 0;
   }
 }
 
@@ -112,4 +125,12 @@
   width: 100%;
   display: flex;
   gap: 8px;
+
+  @include mobile {
+    padding: 20px;
+  }
+
+  @media (max-width: 350px) {
+    display: block;
+  }
 }
