--- a/src/pages/TripFormPage/Step1/TripDayForm/TripDayForm.module.scss
+++ b/src/pages/TripFormPage/Step1/TripDayForm/TripDayForm.module.scss
@@ -17,9 +17,18 @@
   line-height: 14px;
   border: 1px solid $color-laros-light-grey;
   margin-left: 12px;
+
+  @media (max-width: 550px) {
+    margin-left: 0;
+    margin-top: 5px;
+  }
 }
 .content {
   padding: 40px 64px 24px 80px;
+
+  @include mobile-tablet {
+    padding: 20px 20px;
+  }
 }
 .day {
   font-size: 18px;
@@ -37,9 +46,26 @@
   padding-top: 13px;
   display: flex;
   align-items: center;
+  justify-content: space-between;
+
+  @include mobile {
+    display: block;
+  }
 }
+.sectionWrap {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  flex-grow: 1;
+
+  @media (max-width: 550px) {
+    display: block;
+  }
+}
+
 .sectionTitle,
 .roomTitle {
+  max-width: 160px;
   width: 160px;
   font-size: 12px;
   font-weight: $fw-regular;
@@ -56,6 +82,7 @@
   padding: 10px 18px;
   border-radius: 8px;
   display: flex;
+  align-items: center;
   flex: 1;
 }
 .valueName {
@@ -65,6 +92,11 @@
   height: 26px;
   display: flex;
   align-items: center;
+  margin-left: 5px;
+
+  @include mobile {
+    margin: 0;
+  }
 }
 .counter {
   padding-top: 7px;
@@ -73,7 +105,7 @@
 .description {
   display: flex;
   flex-direction: column;
-  width: 541px;
+  max-width: 541px;
 }
 .descriptionSection {
   align-items: flex-start;
@@ -92,13 +124,21 @@
   color: $color-laros-dark-grey;
   cursor: pointer;
 }
+
 .hotel {
   position: relative;
 }
+
 .infoBtn {
-  position: absolute;
-  top: 12px;
-  right: 16px;
+  display: flex;
+  margin-left: 5px;
+  height: 16px;
+  width: 16px;
+  position: relative;
+}
+.regionCard {
+  bottom: 25px;
+  left: -250px;
 }
 .roomTitle {
   font-size: 14px;
@@ -110,11 +150,20 @@
   font-size: 12px;
   font-weight: $fw-regular;
   line-height: 14px;
+
+  @media (max-width: 550px) {
+    margin: 10px 0 0 0;
+  }
 }
+
 .roomCapacity {
   width: 69px;
   flex: 0;
   margin-left: 16px;
+
+  @media (max-width: 550px) {
+    margin: 10px 0 0 0;
+  }
 }
 .pencil {
   position: absolute;
@@ -130,4 +179,43 @@
   border: 1px solid $color-laros-light-grey;
   border-radius: 8px;
   margin-left: auto;
+}
+.modal {
+  padding: 0 20px;
+
+  [class*='modalContent'] {
+    max-width: 1280px;
+    display: block;
+
+    &:nth-child(1) {
+      height: 100%;
+      overflow: hidden;
+      overflow-y: auto;
+      &::-webkit-scrollbar {
+        height: 5px;
+        width: 6px;
+      }
+      &::-webkit-scrollbar-track {
+        background: $color-layout-light-blue;
+        border-radius: 2px;
+      }
+      &::-webkit-scrollbar-thumb {
+        background-color: $color-layout-light-blue-2;
+        border-radius: 24px;
+      }
+    }
+
+    @include laptop-desktop {
+      margin: 0 20px;
+    }
+    @include mobile {
+      margin: 0;
+      min-height: 100%;
+      border-radius: 0;
+    }
+  }
+
+  @include mobile {
+    padding: 0;
+  }
 }
