--- a/src/pages/TripFormPage/Step2/Step2.module.scss
+++ b/src/pages/TripFormPage/Step2/Step2.module.scss
@@ -2,6 +2,10 @@
 
 .container {
   padding: 40px 64px 24px;
+
+  @include mobile-tablet {
+    padding: 10px;
+  }
 }
 .contactTitle {
   margin: 0 0 16px 16px;
@@ -15,6 +19,7 @@
   flex-wrap: wrap;
   justify-content: space-between;
   padding: 0 10px;
+
   & > div {
     width: 355px;
     margin-bottom: 16px;
@@ -25,19 +30,35 @@
   flex-direction: column;
   align-items: start;
   padding: 8px 0 0 40px;
+
+  @include mobile {
+    padding-left: 0;
+  }
 }
+.radioGroup {
+  @include mobile {
+    display: block;
+    label {
+      display: block;
+      margin-top: 5px;
+    }
+ }
+}
+
 .radioLabel {
   font-size: 12px;
   font-weight: $fw-medium;
   color: $color-placeholder;
   margin: 0 25px 12px 0;
 }
+
 .selectWrapper {
   padding: 12px 16px 0 16px;
   height: 63px;
   border: 1px solid $color-laros-light-grey;
   border-radius: 8px;
 }
+
 .selectLabel {
   font-size: 12px;
   font-weight: $fw-bold;
@@ -63,6 +84,7 @@
 }
 .travelersForm {
   padding: 24px 0;
+
   & > div {
     margin-bottom: 16px;
   }
@@ -81,6 +103,10 @@
   align-items: center;
   height: 56px;
   margin-left: 12px;
+
+  @include mobile {
+    display: block;
+  }
 }
 .agentLabel {
   font-size: 12px;
@@ -91,6 +117,14 @@
 .actions {
   padding: 24px 10px;
   display: flex;
+
+  @include mobile-tablet {
+    padding: 10px;
+  }
+
+  button {
+    margin-right: 10px;
+  }
 }
 .terms {
   margin-bottom: 16px;
