--- a/src/features/HotelsSection/HotelSection.module.scss
+++ b/src/features/HotelsSection/HotelSection.module.scss
@@ -2,14 +2,15 @@
 @import '/src/styles/theme/breakpoints.scss';
 
 .hotelSection {
-  padding: 0 0 30px 0;
+  padding: 80px 0 30px 0;
+  background-color: $color-white;
 
   @include tablet-laptop {
     padding: 30px 30px;
   }
 
   @include mobile {
-    padding: 20px 10px;
+    padding: 30px 10px 20px;
   }
 }
 
