--- a/src/features/ContactForm/ContactForm.module.scss
+++ b/src/features/ContactForm/ContactForm.module.scss
@@ -146,6 +146,10 @@
   display: flex;
   justify-content: space-between;
   width: 45%;
+
+  div {
+    cursor: pointer;
+  }
 }
 
 .contactContainer {
