--- a/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Highlighted/HighlightedItem/HighlightedItem.module.scss
+++ b/src/pages/TravelPlannerPage/StaticTravelPlannerPage/Highlighted/HighlightedItem/HighlightedItem.module.scss
@@ -15,7 +15,9 @@
   border-radius: 8px;
   position: relative;
 }
-
+.title {
+  font-weight: bold;
+}
 .text {
   padding-bottom: 16px;
   font-weight: $fw-regular;
