--- a/src/features/ChangeAccomodationModal/RoomCard/RoomCard.module.scss
+++ b/src/features/ChangeAccomodationModal/RoomCard/RoomCard.module.scss
@@ -1,33 +1,43 @@
 @use 'styles/style.scss' as *;
 
 .card {
-  height: 344px;
+  min-height: 344px;
   width: 212px;
   position: relative;
   border-radius: 8px;
-  padding: 0px 0px 16px 0px;
+  padding-bottom: 16px;
   background-color: $color-light-grey;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  overflow: hidden;
 }
+
 .current {
   background-color: $color-laros-light-grey;
 }
+
 .selected {
   background-color: $color-white;
   border: 1px solid $color-light-green;
 }
+
 .content {
   display: flex;
   flex-direction: column;
   align-items: center;
-  overflow-y: auto;
   padding: 10px 19px 0;
+  flex-grow: 1;
 }
-.title {
+
+.name {
   font-size: 14px;
   font-weight: $fw-semibold;
   line-height: 20px;
   margin-bottom: 8px;
 }
+
 .price,
 .changePrice {
   font-size: 12px;
@@ -36,15 +46,19 @@
   color: $color-checkbox-gray;
   margin-bottom: 8px;
 }
+
 .changePrice {
   font-size: 10px;
 }
+
 .description {
   font-size: 12px;
   font-weight: $fw-regular;
   line-height: 20px;
   margin-bottom: 10px;
+  height: 100%;
 }
+
 .button {
   display: flex;
   justify-content: center;
@@ -52,8 +66,6 @@
   height: 20px;
   width: 46px;
   padding: 4px 28px;
-  position: absolute;
-  bottom: 16px;
   border: 1px solid $color-light-green;
   border-radius: 40px;
   font-size: 12px;
@@ -61,17 +73,20 @@
   line-height: 20px;
   color: $color-light-green;
 }
+
 .placeholder {
   background-color: $color-card-placeholder;
   height: 144px;
   width: 210px;
   border-radius: 8px 8px 0 0;
 }
+
 .currentBtn {
   background-color: $color-laros-light-grey;
   border: 1px solid $color-checkbox-gray;
   color: $color-checkbox-gray;
 }
+
 .selectedBtn {
   border: 1px solid $color-light-green;
   background-color: $color-light-green;
