--- a/src/features/DestinationHotels/DestinationHotels.module.scss
+++ b/src/features/DestinationHotels/DestinationHotels.module.scss
@@ -1,8 +1,12 @@
 @use 'styles/style.scss' as *;
 
 .container {
-  padding: 80px 140px 60px 140px;
   background-color: $color-modal-header;
+  padding: 80px 20px;
+}
+.wrapper {
+  max-width: 1160px;
+  margin: auto;
 }
 
 .title {
@@ -18,6 +22,28 @@
   display: grid;
   grid-template-columns: 32% 32% 32%;
   gap: 25px;
+
+  @media (max-width: 1150px) {
+    grid-template-columns: 40% 40%;
+    justify-content: center;
+  }
+
+  @include mobile-tablet {
+    grid-template-columns: 50% 50%;
+    padding: 0 20px;
+  }
+
+  @include mobile {
+    grid-template-columns: 370px;
+    max-width: 410px;
+    margin: auto;
+    justify-content: start;
+  }
+
+  @media (max-width: 450px) {
+    grid-template-columns: 100%;
+    padding: 0;
+  }
 }
 
 .loading {
@@ -28,26 +54,4 @@
 .button {
   display: block;
   margin: 0 auto;
-}
-
-@media screen and (max-width:1024px) {
-  .hotels {
-    grid-template-columns: 1fr 1fr;
-    margin: auto;
-    margin-top: 30px;
-  }
-
-  .container {
-    padding: 80px 15px;
-    display: flex;
-    flex-direction: column;
-  }
-}
-
-@media screen and (max-width:768px) {
-  .hotels {
-    grid-template-columns: 1fr;
-    margin: auto;
-    margin-top: 30px;
-  }
 }
