--- a/src/pages/HotelPage/RoomCards/RoomCards.module.scss
+++ b/src/pages/HotelPage/RoomCards/RoomCards.module.scss
@@ -2,7 +2,7 @@
 @import '/src/styles/theme/breakpoints.scss';
 
 .roomCards {
-  padding: 80px 0 100px;
+  padding: 80px 0;
   background-color: $color-primary-dark-blue;
   margin-bottom: 80px;
   color: $color-white;
@@ -27,6 +27,7 @@
   line-height: 20px;
   text-align: center;
   margin-bottom: 56px;
+  padding: 0 20px;
 }
 
 .roomCardsWrap {
@@ -34,27 +35,9 @@
   padding: 0 20px;
   justify-content: center;
   align-items: stretch;
-
-  @include mobile {
-    flex-wrap: wrap;
-  }
+  flex-wrap: wrap;
 }
 
 .roomCardWrap {
-  &:nth-last-child(n + 2) {
-    margin-right: 24px;
-
-    @include mobile {
-      margin-right: 0;
-    }
-  }
-  &:not(:last-child) {
-    @include mobile {
-      margin-bottom: 10px;
-    }
-  }
-
-  @include mobile {
-    margin-right: 0;
-  }
+  margin: 10px;
 }
