--- a/src/pages/TripFormPage/Sidebar/Sidebar.module.scss
+++ b/src/pages/TripFormPage/Sidebar/Sidebar.module.scss
@@ -5,7 +5,7 @@
   padding-bottom: 40px;
   min-width: 410px;
 
-  @include mobile-laptop {
+  @include mobile-tablet {
     min-width: 310px;
   }
 }
@@ -41,7 +41,7 @@
 .buttonSection {
   padding: 0;
 
-  @media (max-width: 1240px) {
+  @include mobile-tablet {
     display: block;
     button {
       width: 100%;
@@ -90,9 +90,6 @@
   width: 100%;
   span {
     margin-left: 5px;
-  }
-  @media (max-width: 1240px) {
-    width: 100%;
   }
 }
 
