--- a/src/pages/TripPage/Tab/TripPlan/TripPlan.module.scss
+++ b/src/pages/TripPage/Tab/TripPlan/TripPlan.module.scss
@@ -6,7 +6,7 @@
   color: $color-light-black;
 
   @include mobile {
-    padding: 10px;
+    padding: 20px;
   }
 
   @include tablet {
@@ -27,6 +27,8 @@
 
 .cardWrap {
   width: 49%;
+  display: flex;
+  flex-direction: column;
 
   @include mobile {
     width: 100%;
@@ -58,6 +60,22 @@
   line-height: 25px;
   text-align: left;
   color: $color-range;
+  flex-grow: 1;
+}
+.hotelInfo {
+  display: flex;
+  align-items: center;
+
+  font-size: 12px;
+  font-weight: $fw-bold;
+  line-height: 20px;
+  text-align: left;
+  margin-bottom: 10px;
+}
+.bedImage {
+  margin-right: 10px;
+  display: flex;
+  align-items: center;
 }
 
 .image {
