--- a/src/pages/HomePage/Posts/Post.module.scss
+++ b/src/pages/HomePage/Posts/Post.module.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/style' as *;
+
 .wrapper {
   background-color: $color-white;
   width: 100vw;
@@ -14,8 +15,15 @@
     grid-template-columns: repeat(1, 1fr);
   }
 }
+
+.mainTitle {
+  font-weight: $fw-semibold;
+  font-size: 16px;
+  margin-bottom: 40px;
+}
+
 .title {
-  font-weight: $fw-bold;
+  font-weight: $fw-semibold;
   font-size: 16px;
   padding-bottom: 8px;
 }
@@ -37,22 +45,23 @@
 .postTitle {
   padding-bottom: 16px;
 }
+
 .left {
-  padding-top: 81px;
   max-width: 650px;
   margin-left: auto;
   margin-right: 24px;
-  padding-left: 15px;
+  padding: 81px 0 100px 15px;
   @include mobile-tablet {
     margin: 0;
-    padding: 81px 0;
+    padding: 81px 0 40px;
     max-width: 100vw;
     justify-self: center;
   }
   @include mobile {
-    padding: 81px 20px 0;
+    padding: 81px 20px 20px;
   }
 }
+
 .rightWrapper {
   background-color: $color-light-grey;
   padding-top: 81px;
@@ -68,6 +77,7 @@
     padding-right: 0;
   }
 }
+
 .right {
   max-width: 542px;
   @include mobile {
@@ -104,6 +114,10 @@
   @include mobile {
     padding-bottom: 5px;
   }
+}
+
+.imageWrapper {
+  margin-bottom: 30px;
 }
 
 .image {
