--- a/src/pages/VoucherPage/Step1Form/Step1Form.module.scss
+++ b/src/pages/VoucherPage/Step1Form/Step1Form.module.scss
@@ -1,7 +1,6 @@
 @use 'styles/style.scss' as *;
 
 .wrapper {
-  margin-top: 80px;
   padding: 45px 193px 162px;
   display: flex;
   flex-direction: column;
@@ -19,7 +18,7 @@
 .container {
   border-radius: 16px;
   max-width: 1281px;
-  margin: -350px auto 80px;
+  margin: -130px auto 80px;
   box-shadow: 0 4px 12px rgba(27, 36, 45, 0.15);
   background: $color-laros-light-grey;
   min-height: 1341px;
@@ -38,8 +37,23 @@
   }
 }
 
+.introWrapper {
+  width: 100%;
+  height: 100%;
+  padding-top: 80px;
+  background-color: $color-white;
+  display: flex;
+  justify-content: center;
+  border-top-left-radius: 16px;
+  border-top-right-radius: 16px;
+  @include mobile-laptop {
+    padding-top: 40px;
+  }
+}
+
 .intro {
-  width: 766px;
+  width: 100%;
+  max-width: 766px;
 
   @include mobile-laptop {
     width: 100%;
@@ -47,7 +61,6 @@
 }
 
 .introTitle {
-  margin-top: 80px;
   font-size: 56px;
   font-weight: $fw-bold;
   line-height: 67px;
@@ -68,10 +81,11 @@
   font-size: 12px;
   font-weight: $fw-regular;
   line-height: 20px;
+  padding-bottom: 80px;
 
   @include mobile {
     text-align: left;
-    padding: 0 8px;
+    padding: 0 10px 10px 10px;
     margin: 0;
   }
 }
@@ -208,6 +222,7 @@
 .voucherInputs {
   display: flex;
   align-items: center;
+  gap: 8px;
   font-family: $font-Lato;
 
   @include mobile-laptop {
@@ -227,11 +242,15 @@
 .inputVoucherName,
 .price {
   width: 100%;
+  max-width: 400px;
   height: 100%;
   border: none;
   padding-right: 25px;
   padding-bottom: 8px;
   border-radius: 0;
+  @include mobile-laptop {
+    max-width: 100%;
+  }
 }
 
 .input {
@@ -239,4 +258,10 @@
   border-radius: 0;
   height: 55px;
   padding: 8px 25px 8px 8px;
+}
+
+.personDetals {
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
 }
