--- a/src/features/DestinationMaps/Kreta/Kreta.module.scss
+++ b/src/features/DestinationMaps/Kreta/Kreta.module.scss
@@ -7,6 +7,7 @@
   background: url('../../../../public/assets/images/destinations/Individual maps/Insel Kreta.png')
     no-repeat center;
   font-weight: $fw-semibold;
+  margin-right: 300px;
 }
 
 .wrapper {
@@ -21,19 +22,21 @@
 
 @media screen and (max-width: 1350px) {
   .container {
-    transform: scale(0.7);
+    transform: scale(0.8);
   }
 }
 
 @media screen and (max-width: 768px) {
   .container {
-    transform: scale(0.7);
+    transform: scale(0.6);
+    margin-right: 200px;
   }
 }
 @media screen and (max-width: 425px) {
   .container {
-    transform: scale(0.3);
-    height: 400px;
+    transform: scale(0.5);
+    margin-right: 170px;
+    margin-top: -250px;
   }
 }
 .agiamarina {
@@ -54,7 +57,6 @@
   position: absolute;
   top: 53%;
   right: 60%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -77,7 +79,6 @@
   position: absolute;
   top: 76%;
   right: 38%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -100,7 +101,6 @@
   position: absolute;
   top: 71%;
   right: -6%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -123,7 +123,6 @@
   position: absolute;
   top: 57%;
   right: 64%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -146,7 +145,6 @@
   position: absolute;
   top: 65%;
   right: 59%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -169,7 +167,6 @@
   position: absolute;
   top: 60%;
   right: 53%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -190,12 +187,11 @@
   position: absolute;
   top: 52%;
   right: 52%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
 
-.apokotronas {
+.apokoronas {
   display: block;
   &::after {
     content: '';
@@ -207,16 +203,15 @@
   }
 }
 
-.apokotronasLocation {
+.apokoronasLocation {
   position: absolute;
   top: 55%;
   right: 45%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
 
-.sfakakai {
+.sfakaki {
   display: block;
   &::after {
     content: '';
@@ -228,16 +223,15 @@
   }
 }
 
-.sfakakaiLocation {
+.sfakakiLocation {
   position: absolute;
   top: 57%;
   right: 37%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
 
-.herakliton {
+.heraklion {
   display: block;
   &::after {
     content: '';
@@ -249,11 +243,10 @@
   }
 }
 
-.heraklitonLocation {
+.heraklionLocation {
   position: absolute;
   top: 57%;
   right: 28%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
@@ -274,7 +267,6 @@
   position: absolute;
   top: 62%;
   right: 28%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
@@ -295,7 +287,6 @@
   position: absolute;
   top: 69%;
   right: 34%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
@@ -316,7 +307,6 @@
   position: absolute;
   top: 64%;
   right: 12%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
@@ -337,12 +327,11 @@
   position: absolute;
   top: 72%;
   right: 3%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
 
-.kodremenos {
+.kouremenos {
   display: block;
   &::after {
     content: '';
@@ -354,11 +343,10 @@
   }
 }
 
-.kodremenosLocation {
+.kouremenosLocation {
   position: absolute;
   top: 65%;
   right: -5%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
@@ -380,7 +368,6 @@
   position: absolute;
   top: 68%;
   right: 53%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
@@ -402,7 +389,6 @@
   position: absolute;
   top: 68%;
   right: 46%;
-  background: $color-white;
   border-radius: 24px;
   padding: 4px;
 }
@@ -425,7 +411,6 @@
   position: absolute;
   top: 73%;
   right: 34%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -446,7 +431,6 @@
   position: absolute;
   top: 56.5%;
   right: 54%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -467,7 +451,6 @@
   position: absolute;
   top: 62.5%;
   right: 44%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -488,7 +471,6 @@
   position: absolute;
   top: 79%;
   right: 28%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -509,7 +491,6 @@
   position: absolute;
   top: 77.5%;
   right: 20%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -530,7 +511,6 @@
   position: absolute;
   top: 76%;
   right: 15%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -552,7 +532,6 @@
   position: absolute;
   top: 59%;
   right: 44%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -574,7 +553,7 @@
   position: absolute;
   top: 74%;
   right: 25%;
-  background: $color-white;
+
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -596,7 +575,6 @@
   position: absolute;
   top: 65%;
   right: 8%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -618,7 +596,6 @@
   position: absolute;
   top: 61%;
   right: 36%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -640,7 +617,6 @@
   position: absolute;
   top: 70%;
   right: 42%;
-  background: $color-white;
   border-radius: 24px;
   padding: 0 4px;
 }
