--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -15,10 +15,11 @@
   overflow: hidden;
   position: relative;
 }
+
 .video {
   height: 1010px;
   margin-top: -100px;
-  margin-left: -150px;
+  //margin-left: -150px;
   width: 120%;
 
   @media (min-width: 1700px) {
