--- a/src/pages/HomePage/HomePage.module.scss
+++ b/src/pages/HomePage/HomePage.module.scss
@@ -20,13 +20,13 @@
   height: 1010px;
   margin-top: -100px;
   //margin-left: -150px;
-  width: 120%;
+  //width: 120%;
 
   @media (min-width: 1700px) {
     width: 100%;
   }
   @media (min-width: 1850px) {
-    margin-left: -100px;
+    height: auto;
   }
   @media (max-width: 1220px) {
     margin-top: -150px;
