--- a/src/features/AddLocationModal/AddLocationModal.module.scss
+++ b/src/features/AddLocationModal/AddLocationModal.module.scss
@@ -1,10 +1,9 @@
 @use 'styles/style.scss' as *;
 
 .content {
-  width: 1280px;
-  height: 665px;
+  width: 100%;
   overflow-y: scroll;
-  padding-bottom: 120px;
+  padding-bottom: 25px;
   position: relative;
 
   &::-webkit-scrollbar {
@@ -22,8 +21,12 @@
   border-radius: 0 0 16px 16px;
   display: flex;
   align-items: center;
-  box-shadow: inset 0px 0.5px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: inset 0 0.5px 0 rgba(0, 0, 0, 0.1);
   background: $color-white;
+
+  @include mobile {
+    padding: 10px;
+  }
 }
 
 .saveButton {
@@ -35,6 +38,10 @@
   color: $color-white;
   margin-right: 8px;
   cursor: pointer;
+
+  @include mobile {
+    padding: 10px;
+  }
 }
 
 .cancelButton {
@@ -44,6 +51,10 @@
   background: $color-white;
   font-size: 12px;
   cursor: pointer;
+
+  @include mobile {
+    padding: 10px;
+  }
 }
 
 .title {
@@ -55,6 +66,7 @@
 .description {
   font-size: 12px;
   margin-bottom: 50px;
+  line-height: 20px;
 }
 
 .slider {
@@ -73,12 +85,24 @@
   .left {
     margin-right: 30px;
   }
+
+  @include mobile-tablet {
+    flex-direction: column;
+  }
+
+  @include mobile {
+    padding: 0 15px;
+  }
 }
 
 .highlights {
   font-weight: $fw-semibold;
   font-size: 12px;
   padding-left: 16px;
+}
+
+.photos {
+  padding-top: 30px;
 }
 
 .photosTitle {
@@ -93,6 +117,10 @@
 
 .photosSlider {
   width: 580px;
+
+  @include mobile-tablet {
+    width: 100%;
+  }
 }
 
 .photosSliderItem {
@@ -101,6 +129,10 @@
   border-radius: 8px;
   margin-right: 10px;
   background: $color-laros-dark-grey;
+
+  @include mobile-tablet {
+    width: 100%;
+  }
 }
 
 .photosSliderCustomPagination {
@@ -110,6 +142,11 @@
 
 .bannerSliderSwiper {
   height: 100%;
+  padding-bottom: 0 !important;
+
+  [class*='swiper-pagination-bullet-active'] {
+    background: $color-primary-black;
+  }
 }
 
 .bannerSwiperPagination {
