--- a/src/features/ChangeHotelModal/ChangeHotelModal.module.scss
+++ b/src/features/ChangeHotelModal/ChangeHotelModal.module.scss
@@ -11,6 +11,19 @@
   @include mobile {
     padding: 20px;
   }
+
+  &::-webkit-scrollbar {
+    height: 5px;
+    width: 6px;
+  }
+  &::-webkit-scrollbar-track {
+    background: $color-layout-light-blue;
+    border-radius: 2px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $color-layout-light-blue-2;
+    border-radius: 24px;
+  }
 }
 
 .title {
