--- a/src/features/ChangeTransferModal/ChangeTransferModal.module.scss
+++ b/src/features/ChangeTransferModal/ChangeTransferModal.module.scss
@@ -4,7 +4,20 @@
   width: 846px;
   max-height: 700px;
   padding: 40px;
-  overflow-y: scroll;
+  overflow-y: auto;
+
+  &::-webkit-scrollbar {
+    height: 5px;
+    width: 6px;
+  }
+  &::-webkit-scrollbar-track {
+    background: $color-layout-light-blue;
+    border-radius: 2px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $color-layout-light-blue-2;
+    border-radius: 24px;
+  }
 }
 .title {
   font-size: 16px;
@@ -81,7 +94,7 @@
   background-color: $color-bg-black;
 }
 .headerTerms {
-  margin-left: 445px;
+  margin-left: auto;
   font-size: 12px;
   font-weight: $fw-medium;
   line-height: 20px;
