--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -11,7 +11,20 @@ html {
     box-sizing: inherit;
   }
 }
-
+* {
+  &::-webkit-scrollbar {
+    height: 5px;
+    width: 6px;
+  }
+  &::-webkit-scrollbar-track {
+    background: $color-layout-light-blue;
+    border-radius: 2px;
+  }
+  &::-webkit-scrollbar-thumb {
+    background-color: $color-layout-light-blue-2;
+    border-radius: 24px;
+  }
+}
 html,
 body {
   padding: 0;
