--- a/src/components/SliderGalery/SliderGalery.module.scss
+++ b/src/components/SliderGalery/SliderGalery.module.scss
@@ -13,6 +13,12 @@
     display: flex;
     justify-content: center;
     align-items: center;
+    & img {
+      width: 100%;
+      height: auto;
+      object-fit: cover;
+      object-position: center;
+    }
   }
 
   @include laptop {
