--- a/src/features/DestinationMaps/Kreta/Kreta.module.scss
+++ b/src/features/DestinationMaps/Kreta/Kreta.module.scss
@@ -122,7 +122,7 @@
 .falasarnaLocation {
   position: absolute;
   top: 57%;
-  right: 64%;
+  right: 66.5%;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -455,7 +455,7 @@
   padding: 0 4px;
 }
 
-.kapetantana {
+.kapetaniana {
   display: block;
   &::before {
     content: '';
@@ -467,7 +467,7 @@
   }
 }
 
-.kapetantanaLocation {
+.kapetanianaLocation {
   position: absolute;
   top: 79%;
   right: 28%;
