--- a/src/features/DestinationMaps/Peloponnes/Peloponnes.module.scss
+++ b/src/features/DestinationMaps/Peloponnes/Peloponnes.module.scss
@@ -99,7 +99,7 @@
   padding: 4px;
 }
 
-.vitina {
+.vithina {
   display: block;
   &::before {
     content: '';
@@ -111,7 +111,7 @@
   }
 }
 
-.vitinaLocation {
+.vithinaLocation {
   position: absolute;
   top: 38%;
   right: 50%;
@@ -337,7 +337,7 @@
   padding: 0 4px;
 }
 
-.gythionmavrovouni {
+.mavrovouni {
   display: block;
   &::before {
     content: '';
@@ -351,10 +351,10 @@
   }
 }
 
-.gythionmavrovouniLocation {
+.mavrovouniLocation {
   position: absolute;
-  top: 68%;
-  right: 25%;
+  top: 71%;
+  right: 37%;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -376,12 +376,33 @@
 .monemvassiaLocation {
   position: absolute;
   top: 74%;
-  right: 20%;
+  right: 25%;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+.gythion {
+  display: block;
+  &::before {
+    content: '';
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
+    width: 4px;
+    height: 4px;
+    background: $color-white-blue;
+    border-radius: 50%;
+  }
+}
+
+.gythionLocation {
+  position: absolute;
+  top: 68%;
+  right: 39%;
   border-radius: 24px;
   padding: 0 4px;
 }
 
-.aeropolis {
+.areopolis {
   display: block;
   &::after {
     content: '';
@@ -395,10 +416,10 @@
   }
 }
 
-.aeropolisLocation {
+.areopolisLocation {
   position: absolute;
   top: 74%;
-  right: 54%;
+  right: 49%;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -419,8 +440,8 @@
 
 .gerolimenasLocation {
   position: absolute;
-  top: 81%;
-  right: 53%;
+  top: 79%;
+  right: 49%;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -442,7 +463,7 @@
 .methoniLocation {
   position: absolute;
   top: 69%;
-  right: 66%;
+  right: 62%;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -464,7 +485,7 @@
 .marathopolisLocation {
   position: absolute;
   top: 60%;
-  right: 68%;
+  right: 64%;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -486,7 +507,7 @@
 .gialovaLocation {
   position: absolute;
   top: 65%;
-  right: 65%;
+  right: 63%;
   border-radius: 24px;
   padding: 0 4px;
 }
