--- a/src/features/DestinationMaps/Sporaden/Sporaden.module.scss
+++ b/src/features/DestinationMaps/Sporaden/Sporaden.module.scss
@@ -57,7 +57,7 @@
   padding: 0 4px;
 }
 
-.artisti {
+.aristi {
   display: block;
   &::before {
     content: '';
@@ -71,10 +71,31 @@
   }
 }
 
-.artistiLocation {
+.aristiLocation {
   position: absolute;
   top: 32%;
   right: 72%;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+.papingo {
+  display: block;
+  &::before {
+    content: '';
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
+    width: 4px;
+    height: 4px;
+    background: $color-white-blue;
+    border-radius: 50%;
+  }
+}
+
+.papingoLocation {
+  position: absolute;
+  top: 27%;
+  right: 68%;
   border-radius: 24px;
   padding: 0 4px;
 }
@@ -357,6 +378,27 @@
   position: absolute;
   top: 76%;
   right: 31%;
+  border-radius: 24px;
+  padding: 0 4px;
+}
+.chalkida {
+  display: block;
+  &::before {
+    content: '';
+    display: inline-block;
+    margin-bottom: 3px;
+    margin-right: 5px;
+    width: 4px;
+    height: 4px;
+    background: $color-white-blue;
+    border-radius: 50%;
+  }
+}
+
+.chalkidaLocation {
+  position: absolute;
+  top: 64%;
+  right: 34%;
   border-radius: 24px;
   padding: 0 4px;
 }
