--- a/src/components/SliderGalery/SliderGalery.module.scss
+++ b/src/components/SliderGalery/SliderGalery.module.scss
@@ -7,25 +7,22 @@
 
   & > div {
     overflow: visible;
+
+    @include mobile {
+      overflow: hidden;
+    }
   }
 
   .slide {
     display: flex;
     justify-content: center;
     align-items: center;
-    & img {
-      width: 100%;
-      height: auto;
-      object-fit: cover;
-      object-position: center;
-    }
   }
 
   @include laptop {
     overflow: hidden;
   }
-
-  @include mobile-tablet {
-    padding: 0;
+  @include mobile {
+    padding: 0 10px;
   }
 }
