--- a/src/pages/AboutPage/AboutPage.module.scss
+++ b/src/pages/AboutPage/AboutPage.module.scss
@@ -128,26 +128,25 @@
 }
 
 .galleryImage {
-  height: 500px;
-  width: 100%;
-
-  img {
-    border-radius: 8px;
-  }
+  width: 846px;
+  height: 498px;
+  border-radius: 8px;
+  overflow: hidden;
+  position: relative;
+  background-color: $color-modal-bg;
 
   @include mobile {
+    width: 100%;
+    height: 400px;
+    padding: 0 20px;
+  }
+  @media (max-width: 600px) {
     height: 300px;
   }
-
-  @media screen and (max-width: 450px) {
+  @media (max-width: 500px) {
     height: 250px;
   }
-}
-
-@include mobile {
-  .container {
-    [class*='slider'] {
-      padding: 0;
-    }
+  @media (max-width: 400px) {
+    height: 200px;
   }
 }
