--- a/src/pages/HotelPage/HotelImages/HotelImages.module.scss
+++ b/src/pages/HotelPage/HotelImages/HotelImages.module.scss
@@ -10,17 +10,25 @@
 }
 
 .hotelImage {
-  width: 100%;
-  height: 500px;
+  width: 846px;
+  height: 498px;
   border-radius: 8px;
   overflow: hidden;
+  position: relative;
   background-color: $color-modal-bg;
 
-  img {
-    border-radius: 8px;
-  }
-
   @include mobile {
+    width: 100%;
+    height: 400px;
+    padding: 0 20px;
+  }
+  @media (max-width: 600px) {
+    height: 300px;
+  }
+  @media (max-width: 500px) {
     height: 250px;
+  }
+  @media (max-width: 400px) {
+    height: 200px;
   }
 }
