--- a/src/pages/HotelPage/HotelIntro/HotelIntro.module.scss
+++ b/src/pages/HotelPage/HotelIntro/HotelIntro.module.scss
@@ -87,6 +87,10 @@
   border-radius: 0 16px 0 0;
   overflow: hidden;
   background-color: $color-laros-light-grey;
+
+  @include mobile-tablet {
+    border-radius: 0;
+  }
 }
 
 .tagsTitle {
